# miniml-haskell

./: .gitignore  Makefile  README.md  hm-demo.cabal  miniml.cabal  minimlAAAAA.cabal  package.yaml  stack.yaml
app/: Main.hs
lib/: Inferencer.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  ParserUtils.hs  Parsetree.hs  Scheme.hs  Subst.hs  Typedtree.hs
tests/: BasicSumTest.hs  InferTest.hs  Main.hs  ParserTest.hs  Utils.hs
tests/Tests/: All.hs  Common.hs
tests/Tests/Golden/Lexer/: test1.mml  test2.mml  test3.mml  test4.mml
tests/Tests/Golden/Parser/: test1.mml  test2.mml  test3.mml  test4.mml
tests/Tests/Golden/src/: test1.mml  test2.mml  test3.mml  test4.mml
