cabal-version:      2.4
name:               miniml
version:            0.1.0.0
author:             Kakadu
maintainer:         Kakadu@pm.me

extra-source-files: CHANGELOG.md

library lib
    exposed-modules: Parsetree, Inferencer, Typedtree, Subst, Scheme
    hs-source-dirs: lib
    build-depends: base, containers
    default-language: Haskell2010


test-suite tests
    type: exitcode-stdio-1.0
    main-is: BasicSumTest.hs
    other-modules: InferTest
    build-depends: base, HUnit, lib, containers
    hs-source-dirs: tests
    default-language: Haskell2010