cabal-version:      2.4
name:               minimlAAAAA
version:            0.1.0.0


-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Kakadu
maintainer:         Kakadu@pm.me

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md



library miniml
    exposed-modules: Parsetree, Inferencer, Typedtree, Subst,Scheme
    hs-source-dirs: lib
    build-depends: base, containers
    default-language: Haskell2010


test-suite tests
    type: exitcode-stdio-1.0
    main-is: BasicSumTest.hs
    other-modules: InferTest
    build-depends: base, HUnit, miniml, containers
    hs-source-dirs: tests
    default-language: Haskell2010